# z20_server

./: .env  .gitignore  Dockerfile  Dockerfile_  docker-compose.yaml  log.txt  rebuild.sh
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/walrus/: mod.rs  model.rs  repository.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  main.rs  router.rs
crates/server/src/api/: mod.rs  walrus_controller.rs
crates/server/src/dtos/: file_dto.rs  mod.rs  walrus_dto.rs
crates/server/src/extractors/: validation_extractor.rs
crates/server/src/handler/: mod.rs
crates/server/src/handler/walrus/: blob_handler.rs  file_handler.rs  mod.rs  site_handler.rs  upload_test.rs
crates/server/src/services/: mod.rs  walrus_service.rs
crates/utils/src/: config.rs
